# POlyglott

./: .claudeignore  .gitignore  AI_DEVELOPMENT.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
prompts/: stage1.md  stage2.md  stage3.md  stage4.md  stage5.1.md  stage5.md  stage6.md  stage7.md
reviews/: 2026-02-12_pre-stage6.md  CODE_REVIEW_TEMPLATE.md
src/polyglott/: __init__.py  __main__.py  cli.py  context.py  exporter.py  formatter.py  linter.py  master.py  parser.py  po_writer.py  translate.py
tests/: test_cli.py  test_context.py  test_exporter.py  test_formatter.py  test_linter.py  test_master.py  test_parser.py  test_po_writer.py  test_translate.py
tests/fixtures/: complex.po  context_invalid.yaml  context_missing_context.yaml  context_missing_pattern.yaml  context_no_rules.yaml  context_rules.yaml  context_test.po  empty.po  format_issues.po  glossary.yaml  glossary_invalid.yaml  glossary_list_format.yaml  glossary_no_terms.yaml  malformed.po  simple.po  term_issues.po  unicode.po
tests/fixtures/master/: django.po  forms.po  glossary_de.yaml  master_existing.csv
